--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "1.3.3",
     "clsx": "^1.2.1",
+    "copy-to-clipboard": "^3.3.3",
     "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
