--- a/package.json
+++ b/package.json
@@ -10,16 +10,20 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "axios": "1.3.3",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
+    "ethers": "^6.13.4",
     "i18next": "^23.11.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.2",
     "react-i18next": "^14.1.2",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^22.5.4",
