--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@reduxjs/toolkit": "^2.3.0",
     "axios": "1.3.3",
     "clsx": "^1.2.1",
     "copy-to-clipboard": "^3.3.3",
@@ -20,6 +21,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.2",
     "react-i18next": "^14.1.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.8.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
