--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "strictNullChecks": true,
 
     /* Bundler mode */
+    "target": "ES2015",
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": false,
     "isolatedModules": true,
